--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Supreme invention
-subtitle:
+title: Johan Driessen
+subtitle: Messing around with stuff I like
 description:
 keywords:
 author: Johan Driessen
-language: 
+language:
 timezone:
 
 # URL
@@ -43,7 +43,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -52,7 +52,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -74,6 +74,18 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: landscape
+
+# https://github.com/hexojs/hexo-generator-feed
+feed:
+  type: rss2
+  path: feed/rss.xml
+  limit: 0
+  hub:
+  content: true
+#  content_limit: 140
+#  content_limit_delim: ' '
+  order_by: -date
+  icon:
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
