Disqus-comments and info box with social media links

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ author: Johan Driessen
 language:
 timezone:
 
+disqus_shortname: johansblog
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://johan.driessen.se
