--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-reference": "^1.0.4",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
