New post: Resolving-ILogger-with-Nancy-and-TinyIoC

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Programming, old tech and other stuff that interest me
 description:
 keywords:
 author: Johan Driessen
-author_info: "My name is Johan Driessen. I work as a consultant and developer at Approach. These are good way to get in touch with me:"
+author_info: "My name is Johan Driessen. I work as a consultant and developer at Approach. These are good ways to get in touch with me:"
 language:
 timezone:
 
