--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description:
 keywords:
 author: Johan Driessen
 author_info: "My name is Johan Driessen. I work as a consultant and developer at Approach. These are good ways to get in touch with me:"
-language:
-timezone:
+#language:
+#timezone:
 
 disqus_shortname: johansblog
 
@@ -42,7 +42,8 @@ skip_render:
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
