Replace google analytics with matomo

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -29,8 +29,10 @@ archive_type: 'yearly'
 show_count: false
 
 # Miscellaneous
-google_analytics: UA-909814-1
+google_analytics:
 gauges_analytics:
+matomo_analytics_url: alastor.approach.io
+matomo_analytics_site: 1
 favicon: /favicon.png
 twitter: nahojd
 google_plus:
