--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
+include:
+  - .well-known/**/*
+
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
